--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="Roaring lion ig"
+    title="Majestic morning rawr"
+    />
+    <img 
+    src="https://i.imgur.com/H1qsYEl.png"
+    alt="crow"
+    />
+    <img
+    src="https://images.app.goo.gl/eqeJbpkMNabWqTgb9"
+    alt="redpanda yawning"
+    title="Eepy red panda"
+    />
   </body>
 </html>
